new navigation baar developed

--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@mui/material": "^5.16.4",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-navigation-menu": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@react-three/drei": "^9.109.2",
     "@react-three/fiber": "^8.16.8",
     "aos": "^3.0.0-beta.6",
     "bootstrap": "^5.3.3",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "cobe": "^0.6.3",
@@ -33,6 +35,7 @@
     "framer-motion": "^11.3.17",
     "lucide-react": "^0.414.0",
     "next-themes": "^0.3.0",
+    "ns-solution": "file:",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-day-picker": "^8.10.1",
@@ -42,7 +45,7 @@
     "react-scroll": "^1.9.0",
     "react-spring": "^9.7.4",
     "react-tweet": "^3.2.1",
-    "tailwind-merge": "^2.4.0",
+    "tailwind-merge": "^2.5.2",
     "three": "^0.166.1",
     "three-globe": "^2.31.1"
   },
