--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@react-three/drei": "^9.109.2",
     "@react-three/fiber": "^8.16.8",
     "aos": "^3.0.0-beta.6",
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -31,12 +32,16 @@
     "cobe": "^0.6.3",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
     "flowbite": "^2.4.1",
     "flowbite-react": "^0.10.1",
     "framer-motion": "^11.3.17",
     "lucide-react": "^0.414.0",
     "next-themes": "^0.3.0",
+    "nodemon": "^3.1.7",
     "ns-solution": "file:",
+    "razorpay": "^2.9.5",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-day-picker": "^8.10.1",
